--- a/css/layout.css
+++ b/css/layout.css
@@ -4,10 +4,11 @@
 /*header==============*/
 header.c1{ width:100%; height:100vh; background:#3a7ba1 url(../images/header_1920x1280.jpg) center top no-repeat; background-size:100% auto; position:relative; }
 header.c1::before{ display:block; content:""; width:100%; height:100vh; background:#3a7ba1; position:absolute; left:0; top:0; opacity:0.8;}
-header.c1 .inner{ }
-header.c1 .inner h1{ color:#fff; font-weight:bold; position:absolute; left:50%; top:200px; margin-left:-200px; text-shadow:0px 2px 1px rgba(0,0,0,0.2)}
-header.c1 .inner h2{  color:#fff; position:absolute; left:50%; top:260px; margin-left:-130px;}
-header.c1 .inner p.slogan{ width:280px; font-size:15px; color:#fff; position:absolute; top:320px; left:50%; margin-left:-128px;}
+header.c1 .inner{width:600px; height:80vh; position:absolute; left:50%; top:80px; margin-left:-300px; text-align:center; border:1px solid red;/**/ }
+header.c1 .inner h1{ color:#fff; font-weight:bold; text-shadow:0px 2px 1px rgba(0,0,0,0.2); }
+header.c1 .inner h2{color:#fff; margin-bottom:30px;}
+header.c1 .inner p.slogan{ width:320px; margin-left:150px; font-size:15px; text-align:left; color:#fff;}
+header.c1 .inner p.slogan span{ display:block; margin-top:20px;}
 header.c1 .inner .scroll_d{ position:absolute; bottom:20px; left:50%; margin-left:-20px; z-index:5; text-align:center;}
 header.c1 .inner .scroll_d .mouse{ display:block; width:80%; margin-left:5px; margin-bottom:10px;}
 header.c1 .inner .scroll_d .arrow{ display:block; width:50%; height:auto; margin-left:12px;}
@@ -53,12 +54,14 @@ header.c1 .inner .scroll_d span{ color:#fff; font-size:13px;}
 
 /*小於600*/
 @media only screen and (max-width:600px){
+	
 	header.c1{height:80vh; background-size:cover;}
 	header.c1::before{height:80vh;}
-	header.c1 .inner h1{ font-size:28px; font-weight:normal; margin-left:-140px; top:80px;}
-	header.c1 .inner h2{ font-size:18px; margin-left:-125px; top:130px;}
-	header.c1 .inner p.slogan{top:200px;margin-left:-130px;}
-	header.c1 .inner .scroll_d{ position:absolute; bottom:15px; left:50%; margin-left:-20px;}
+	header.c1 .inner{ top:20px; height:70vh; }
+	header.c1 .inner h1{ font-size:28px; font-weight:normal;}
+	header.c1 .inner h2{ font-size:18px;}
+	header.c1 .inner p.slogan{}
+	header.c1 .inner .scroll_d{ position:absolute; bottom:50px; left:50%; margin-left:-20px;}
 header.c1 .inner .scroll_d .mouse{width:50%; margin-left:15px;}
 header.c1 .inner .scroll_d .arrow{ width:30%; margin-left:20px;}
 }
@@ -67,8 +70,10 @@ header.c1 .inner .scroll_d .arrow{ width:30%; margin-left:20px;}
 
 /*小於320*/
 @media only screen and (max-width:320px){
-	header.c1{height:80vh;}
-	header.c1::before{height:80vh;}
+	header.c1{height:90vh;}
+	header.c1::before{height:90vh;}
+	header.c1 .inner{ width:320px;  height:80vh; margin-left:-160px; top:30px;}
+	header.c1 .inner p.slogan{ width:280px; margin-left:20px;}
 	header.c1 .inner .scroll_d{ position:absolute; bottom:15px; left:50%; margin-left:-20px;}
 header.c1 .inner .scroll_d .mouse{width:40%; margin-left:15px;}
 header.c1 .inner .scroll_d .arrow{ width:30%; margin-left:18px;}
