--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@
 /*header==============*/
 header.c1{ width:100%; height:100vh; background:#3a7ba1 url(../images/header_1920x1280.jpg) center top no-repeat; background-size:100% auto; position:relative; }
 header.c1::before{ display:block; content:""; width:100%; height:100vh; background:#3a7ba1; position:absolute; left:0; top:0; opacity:0.8;}
-header.c1 .inner{width:600px; height:80vh; position:absolute; left:50%; top:80px; margin-left:-300px; text-align:center; border:1px solid red;/**/ }
+header.c1 .inner{width:600px; height:80vh; position:absolute; left:50%; top:80px; margin-left:-300px; text-align:center;}
 header.c1 .inner h1{ color:#fff; font-weight:bold; text-shadow:0px 2px 1px rgba(0,0,0,0.2); }
 header.c1 .inner h2{color:#fff; margin-bottom:30px;}
 header.c1 .inner p.slogan{ width:320px; margin-left:150px; font-size:15px; text-align:left; color:#fff;}
