--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,7 @@ header.c1 .inner{width:600px; height:80vh; position:absolute; left:50%; top:80px
 header.c1 .inner h1{ color:#fff; font-weight:bold; text-shadow:0px 2px 1px rgba(0,0,0,0.2); }
 header.c1 .inner h2{color:#fff; margin-bottom:30px;}
 header.c1 .inner p.slogan{ width:320px; margin-left:150px; font-size:15px; text-align:left; color:#fff;}
-header.c1 .inner p.slogan span{ display:block; margin-top:20px;}
+header.c1 .inner  span{ display:block; margin-top:20px; font-size:18px; color:#fff;}
 header.c1 .inner .scroll_d{ position:absolute; bottom:20px; left:50%; margin-left:-20px; z-index:5; text-align:center;}
 header.c1 .inner .scroll_d .mouse{ display:block; width:80%; margin-left:5px; margin-bottom:10px;}
 header.c1 .inner .scroll_d .arrow{ display:block; width:50%; height:auto; margin-left:12px;}
